app/styles/main.scss
// bower:scss
// endbower

@mixin layout-sm {
  @media(max-width: 599px) {
    @content;
  }
}

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

body {
  padding: 0;
}

md-toolbar {
  overflow: hidden
}

.md-toolbar-tools {
  margin-left: 24px !important;
  color: rgb(255,215,64);
}

.logo {
  display: inline-block;
  width: 32px;
  height: 32px;
  margin-right: 16px;
  svg {
    .outline {
      stroke: rgb(255,215,64);
    }
  }
}

.github-link {
  font-size: 12px;
  color: rgba(255,215,64,0.5) !important;
}

.content {
  padding: 24px;
  overflow-y: scroll !important;
}

.inline-input {
  padding-bottom: 2px;
}

.muted {
  color: #aaa;
}

.highlight {
  position: relative;
  margin-bottom: 40px;
}

.highlight--link {
  display: block;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  z-index: 1;
}

.highlight--teaser {
  margin-right: 24px;
  width: 320px;
  @include layout-sm {
    margin-bottom: 16px;
  }
}

.highlight--image {
  $ratio: 16 / 9;
  $imageRatio:  4 / 3;
  position: relative;
  width: 100%;
  height: 0;
  padding-bottom: percentage(1 / $ratio);
  overflow: hidden;
  img {
    position: absolute;
    width: 100%;
    top: percentage((1 - $ratio / $imageRatio) / 2);
    left: 0
  }
}

.highlight--info {
  font-size: 12px;
  color: #aaa;
  md-icon {
    font-size: 20px;
  }
}

.highlight--info-part {
  margin-right: 16px;
  &.is-fixed {
    width: 100px;
  }
}

.highlight--title {
  margin-top: 0;
  margin-bottom: 12px;
}

.highlight--details {
  word-wrap: break-word;
}


.search {
  margin-bottom: 24px;
}

